# stancer-iliad

./: .gitignore  README.md  pyproject.toml
.github/workflows/: build.yml
stancer_client/: client.py  config.py  exceptions.py  models.py
tests/: test_client.py
