[project]
name = "stancer"
version = "0.1.0"
authors = [
    {name = "Khang Lai", email = "laiduy98@gmail.com"}
]
description = "Technical test"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=25.1.0",
    "build>=1.2.2.post1",
    "httpx>=0.28.1",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
]

